Increases line-height to avoid clipping

--- a/wdn/templates_3.1/less/header/header.less
+++ b/wdn/templates_3.1/less/header/header.less
@@ -144,7 +144,7 @@
             letter-spacing: 0.1em;
             text-transform: uppercase;
             font-family: @impactFont;
-            line-height: 0.8;
+            line-height: 1;
             font-weight: 400;
         }
         
